--- a/packages/mdm_domain/pubspec.yaml
+++ b/packages/mdm_domain/pubspec.yaml
@@ -7,8 +7,11 @@ environment:
 
 dependencies:
   equatable: ^2.0.3
+  json_annotation: ^4.5.0
 
 dev_dependencies:
+  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
   coverage: ^1.1.0
   mocktail: ^0.3.0
   test: ^1.19.2
