--- a/packages/mini_sprite_editor/pubspec.yaml
+++ b/packages/mini_sprite_editor/pubspec.yaml
@@ -8,12 +8,14 @@ environment:
 
 dependencies:
   bloc: ^8.0.3
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  mdm_domain: 1.0.0+1
 
 dev_dependencies:
   bloc_test: ^9.0.3
